<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="nome">Name</string>
    <string name="app_name">Shopping Australia</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="senha">Password</string>
    <string name="cadastrar">Register</string>
    <string name="info_all_fields">It is necessary to inform all fields</string>
    <string name="general_erro">Something wrong is not right.</string>
    <string name="email_exists">Email already exists, please use other</string>
    <string name="login">Login</string>
    <string name="user_pass_error">User and / or password are incorrect</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="descricao">Describe</string>
    <string name="produto_alterada_sucesso">Product changed successfully</string>
    <string name="produto_incluida_sucesso">Product added successfully</string>
    <string name="produto_removida_sucessp">Product successfully removed</string>
    <string name="adicionar_Item">Add Product</string>
    <string name="email">Enter with email</string>
    <string name="nao_tem_uma_conta">Don\'t have account?</string>
    <string name="cadastre_se">Log in</string>
    <string name="title_activity_maps">Map</string>
    <string name="botao_voltar">Back to Menu</string>
    <string name="info_map">Here it is the best store to do your shopping !!!</string>
    <string name="check_box">Purchased Item</string>
    <string name="button_add_date">Click Here to add the estimated purchase date</string>
    <string name="preco_produto">Add Here the product value</string>
    <string name="secione_categoria">Select the category...</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="erro_cant_open_activity">Sorry, Can´t open the Map : (</string>
    <string name="textDeveloper">developed by: Adriano R P Leite</string>
    <string name="textVersion">Current App Version: 1.0</string>
    <string name="tvInfoProduct">" Enter your product information below for your shopping list"</string>
    <string name="necessario_input_dados">Please fill in the description and price fields</string>
    <string name="hello">Welcome, user</string>
    <string name="compradas">Products Purchased</string>
    <string name="pendentes">A Comprar</string>
    <string name="sair">Logout</string>
    <string name="sobre">About</string>
    <string name="remocao_do_produto">Remove product</string>
    <string name="Remove">Remove</string>
    <string name="mapas">Maps</string>
    <string name="adicionar_item">Add Product</string>

</resources>
